# autoware_carla_launch

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile_carla_bridge  Makefile  README.md  autoware_carla.repos  dependency_install.sh  download_map.sh  env.sh  run-autoware-docker.sh  run-bridge-docker.sh  run-docker.sh  run_carla_bridge.sh  zenoh-bridge-dds-conf.json5  zenoh-bridge-ros2dds-conf.json5  zenoh-carla-bridge-conf.json5  zenoh-carla-bridge.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release.yaml
carla_map/: .gitignore  README.md
config/: RMW_ZENOH_ROUTER_CONFIG.json5  RMW_ZENOH_ROUTER_V1_CONFIG.json5  RMW_ZENOH_ROUTER_V2_CONFIG.json5  RMW_ZENOH_SESSION_CONFIG.json5  rmw-zenoh-carla-bridge-conf.json5  zenoh-bridge-ros2dds-conf.json5  zenoh-carla-bridge-conf.json5
container/: Dockerfile_autoware  Dockerfile_autoware_src  Dockerfile_carla_bridge  run-autoware-docker-src.sh  run-autoware-docker.sh  run-bridge-docker.sh
docs/: README.rst  architectures.rst  build.rst  conf.py  faq.rst  index.rst  prerequisites.rst  run.rst  usage.rst
guide/: book.toml
script/: build-autoware.sh  build_models.sh  dependency_install.sh  (+9 more)
src/autoware_carla_launch/: CMakeLists.txt  README.md  download_map.sh  package.xml
src/autoware_carla_launch/config/: raw_vehicle_cmd_converter.param.yaml
src/autoware_carla_launch/launch/: autoware_carla.launch.xml  autoware_zenoh.launch.xml  carla_bridge.launch.xml  carla_bridge_two_vehicles.launch.xml  manual_control.launch.xml
src/autoware_carla_launch/map/: .gitignore
src/autoware_carla_launch/map/CarlaTown03/: lanelet2_map.osm
src/autoware_carla_launch/rviz/: autoware.rviz  autoware_carla.rviz
src/autoware_carla_launch/scripts/: vehicle_interface_shim.py
src/carla_pointcloud/: CMakeLists.txt  README.md  package.xml
src/carla_pointcloud/include/carla_pointcloud/: carla_pointcloud_interface_node.hpp
src/carla_pointcloud/launch/: carla_pointcloud_interface.xml
src/carla_pointcloud/src/carla_pointcloud/: carla_pointcloud_interface_node.cpp
(+51 files in other folders)
