<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_pointcloud</name>
  <version>0.1.0</version>
  <description>Convert Simple point cloud message to Autoware recognized Extended cloud message </description>
  <maintainer email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Hatem Darweesh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>angles</depend>
  <depend>diagnostic_updater</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>velodyne_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <depend>velodyne_pointcloud</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
